[gd_scene load_steps=24 format=3 uid="uid://d1eipg2g424bx"]

[ext_resource type="Texture2D" uid="uid://dkf1oolsulhck" path="res://tileset/6cca184b-b588-4960-94be-d8aa31891e10.png" id="1_35m6j"]
[ext_resource type="Script" path="res://scripts/level_3.gd" id="1_c3q3y"]
[ext_resource type="PackedScene" uid="uid://ca6qo8ghvov8u" path="res://scenes/door_inside.tscn" id="3_bo535"]
[ext_resource type="Script" path="res://scripts/door_level_4.gd" id="3_c2jgi"]
[ext_resource type="PackedScene" uid="uid://dpxphmuvxv2ys" path="res://scenes/vending_machine.tscn" id="3_mi8ll"]
[ext_resource type="Script" path="res://scripts/vending_machine.gd" id="4_w3i34"]
[ext_resource type="PackedScene" uid="uid://ebt58f7ocsbq" path="res://UI/paused_menu.tscn" id="4_x8pl2"]
[ext_resource type="PackedScene" uid="uid://05dpq3ap104a" path="res://scenes/teo_snorbest.tscn" id="5_cw2v8"]
[ext_resource type="PackedScene" uid="uid://cu21mqf14pmgi" path="res://scenes/Enemy.tscn" id="7_ieths"]
[ext_resource type="AudioStream" uid="uid://u5tmbspl160g" path="res://sounds/NextLevel.wav" id="8_1ipo6"]
[ext_resource type="PackedScene" uid="uid://cpwsn6wvb4t6q" path="res://UI/KillsLabel.tscn" id="8_1lsfi"]
[ext_resource type="PackedScene" uid="uid://caevj2k7wjup8" path="res://UI/die_menu.tscn" id="9_o1yx0"]
[ext_resource type="PackedScene" uid="uid://bjsfhygy73s3y" path="res://UI/controlCoin.tscn" id="10_ssqv5"]
[ext_resource type="PackedScene" uid="uid://cq11s2dy5dru0" path="res://UI/heal_menu.tscn" id="11_g3gpw"]
[ext_resource type="PackedScene" uid="uid://cx63uh8hylrqc" path="res://scenes/computers.tscn" id="14_5s037"]
[ext_resource type="AudioStream" uid="uid://dfefdkrplbnrx" path="res://sounds/Levels.wav" id="16_b6mvl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vmck7"]
texture = ExtResource("1_35m6j")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -11.8125, -16, -11.8125, 16, -16, 16)
1:2/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 10.8125, -16, 10.6875, 16, 16, 16)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -11.8125, -16, -11.6875, 11.625, 16, 11.625, 16, 16, -16, 16)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 11.5, 16, 11.625, 16, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 10.8125, -16, 10.7041, 11.7491, -16, 11.625, -16, 16, 16, 16)

[sub_resource type="TileSet" id="TileSet_5x0aw"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
sources/0 = SubResource("TileSetAtlasSource_vmck7")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6iioq"]
size = Vector2(62, 52.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_1ju8r"]
radius = 37.1214

[sub_resource type="Animation" id="Animation_pr2to"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_g2r2q"]
resource_name = "way"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 0, 0.254902), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e2k7j"]
_data = {
"RESET": SubResource("Animation_pr2to"),
"way": SubResource("Animation_g2r2q")
}

[node name="Level_3" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_c3q3y")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_5x0aw")
format = 2
layer_0/tile_data = PackedInt32Array(131073, 65536, 2, 196609, 65536, 2, 262145, 65536, 2, 327681, 65536, 2, 393217, 65536, 2, 458753, 65536, 2, 524289, 65536, 2, 589825, 65536, 2, 655361, 65536, 2, 720897, 65536, 2, 786433, 65536, 2, 851969, 65536, 2, 917505, 65536, 2, 131074, 65536, 2, 196610, 65536, 2, 262146, 65536, 2, 327682, 65536, 2, 393218, 65536, 2, 458754, 65536, 2, 524290, 65536, 2, 589826, 65536, 2, 655362, 65536, 2, 720898, 65536, 2, 786434, 65536, 2, 851970, 65536, 2, 917506, 65536, 2, 131075, 65536, 2, 196611, 65536, 2, 262147, 65536, 2, 327683, 65536, 2, 393219, 65536, 2, 458755, 65536, 2, 524291, 65536, 2, 589827, 65536, 2, 655363, 65536, 2, 720899, 65536, 2, 786435, 65536, 2, 851971, 65536, 2, 917507, 65536, 2, 131076, 65536, 2, 196612, 65536, 2, 262148, 65536, 2, 327684, 65536, 2, 393220, 65536, 2, 458756, 65536, 2, 524292, 65536, 2, 589828, 65536, 2, 655364, 65536, 2, 720900, 65536, 2, 786436, 65536, 2, 851972, 65536, 2, 917508, 65536, 2, 131077, 65536, 2, 196613, 65536, 2, 262149, 65536, 2, 327685, 65536, 2, 393221, 65536, 2, 458757, 65536, 2, 524293, 65536, 2, 589829, 65536, 2, 655365, 65536, 2, 720901, 65536, 2, 786437, 65536, 2, 851973, 65536, 2, 917509, 65536, 2, 131078, 65536, 2, 196614, 65536, 2, 262150, 65536, 2, 327686, 65536, 2, 393222, 65536, 2, 458758, 65536, 2, 524294, 65536, 2, 589830, 65536, 2, 655366, 65536, 2, 720902, 65536, 2, 786438, 65536, 2, 851974, 65536, 2, 917510, 65536, 2, 131079, 65536, 2, 196615, 65536, 2, 262151, 65536, 2, 327687, 65536, 2, 393223, 65536, 2, 458759, 65536, 2, 524295, 65536, 2, 589831, 65536, 2, 655367, 65536, 2, 720903, 65536, 2, 786439, 65536, 2, 851975, 65536, 2, 917511, 65536, 2, 131080, 65536, 2, 196616, 65536, 2, 262152, 65536, 2, 327688, 65536, 2, 393224, 65536, 2, 458760, 65536, 2, 524296, 65536, 2, 589832, 65536, 2, 655368, 65536, 2, 720904, 65536, 2, 786440, 65536, 2, 851976, 65536, 2, 917512, 65536, 2, 131081, 65536, 2, 196617, 65536, 2, 262153, 65536, 2, 327689, 65536, 2, 393225, 65536, 2, 458761, 65536, 2, 524297, 65536, 2, 589833, 65536, 2, 655369, 65536, 2, 720905, 65536, 2, 786441, 65536, 2, 851977, 65536, 2, 917513, 65536, 2, 131082, 65536, 2, 196618, 65536, 2, 262154, 65536, 2, 327690, 65536, 2, 393226, 65536, 2, 458762, 65536, 2, 524298, 65536, 2, 589834, 65536, 2, 655370, 65536, 2, 720906, 65536, 2, 786442, 65536, 2, 851978, 65536, 2, 917514, 65536, 2, 131083, 65536, 2, 196619, 65536, 2, 262155, 65536, 2, 327691, 65536, 2, 393227, 65536, 2, 458763, 65536, 2, 524299, 65536, 2, 589835, 65536, 2, 655371, 65536, 2, 720907, 65536, 2, 786443, 65536, 2, 851979, 65536, 2, 917515, 65536, 2, 131084, 65536, 2, 196620, 65536, 2, 262156, 65536, 2, 327692, 65536, 2, 393228, 65536, 2, 458764, 65536, 2, 524300, 65536, 2, 589836, 65536, 2, 655372, 65536, 2, 720908, 65536, 2, 786444, 65536, 2, 851980, 65536, 2, 917516, 65536, 2, 131085, 65536, 2, 196621, 65536, 2, 262157, 65536, 2, 327693, 65536, 2, 393229, 65536, 2, 458765, 65536, 2, 524301, 65536, 2, 589837, 65536, 2, 655373, 65536, 2, 720909, 65536, 2, 786445, 65536, 2, 851981, 65536, 2, 917517, 65536, 2, 131086, 65536, 2, 196622, 65536, 2, 262158, 65536, 2, 327694, 65536, 2, 393230, 65536, 2, 458766, 65536, 2, 524302, 65536, 2, 589838, 65536, 2, 655374, 65536, 2, 720910, 65536, 2, 786446, 65536, 2, 851982, 65536, 2, 917518, 65536, 2, 131087, 65536, 2, 196623, 65536, 2, 262159, 65536, 2, 327695, 65536, 2, 393231, 65536, 2, 458767, 65536, 2, 524303, 65536, 2, 589839, 65536, 2, 655375, 65536, 2, 720911, 65536, 2, 786447, 65536, 2, 851983, 65536, 2, 917519, 65536, 2, 131088, 65536, 2, 196624, 65536, 2, 262160, 65536, 2, 327696, 65536, 2, 393232, 65536, 2, 458768, 65536, 2, 524304, 65536, 2, 589840, 65536, 2, 655376, 65536, 2, 720912, 65536, 2, 786448, 65536, 2, 851984, 65536, 2, 917520, 65536, 2, 131089, 65536, 2, 196625, 65536, 2, 262161, 65536, 2, 327697, 65536, 2, 393233, 65536, 2, 458769, 65536, 2, 524305, 65536, 2, 589841, 65536, 2, 655377, 65536, 2, 720913, 65536, 2, 786449, 65536, 2, 851985, 65536, 2, 917521, 65536, 2, 131090, 65536, 2, 196626, 65536, 2, 262162, 65536, 2, 327698, 65536, 2, 393234, 65536, 2, 458770, 65536, 2, 524306, 65536, 2, 589842, 65536, 2, 655378, 65536, 2, 720914, 65536, 2, 786450, 65536, 2, 851986, 65536, 2, 917522, 65536, 2, 131091, 65536, 2, 196627, 65536, 2, 262163, 65536, 2, 327699, 65536, 2, 393235, 65536, 2, 458771, 65536, 2, 524307, 65536, 2, 589843, 65536, 2, 655379, 65536, 2, 720915, 65536, 2, 786451, 65536, 2, 851987, 65536, 2, 917523, 65536, 2, 131092, 65536, 2, 196628, 65536, 2, 262164, 65536, 2, 327700, 65536, 2, 393236, 65536, 2, 458772, 65536, 2, 524308, 65536, 2, 589844, 65536, 2, 655380, 65536, 2, 720916, 65536, 2, 786452, 65536, 2, 851988, 65536, 2, 917524, 65536, 2, 131093, 65536, 2, 196629, 65536, 2, 262165, 65536, 2, 327701, 65536, 2, 393237, 65536, 2, 458773, 65536, 2, 524309, 65536, 2, 589845, 65536, 2, 655381, 65536, 2, 720917, 65536, 2, 786453, 65536, 2, 851989, 65536, 2, 917525, 65536, 2, 131094, 65536, 2, 196630, 65536, 2, 262166, 65536, 2, 327702, 65536, 2, 393238, 65536, 2, 458774, 65536, 2, 524310, 65536, 2, 589846, 65536, 2, 655382, 65536, 2, 720918, 65536, 2, 786454, 65536, 2, 851990, 65536, 2, 917526, 65536, 2, 131095, 65536, 2, 196631, 65536, 2, 262167, 65536, 2, 327703, 65536, 2, 393239, 65536, 2, 458775, 65536, 2, 524311, 65536, 2, 589847, 65536, 2, 655383, 65536, 2, 720919, 65536, 2, 786455, 65536, 2, 851991, 65536, 2, 917527, 65536, 2, 131096, 65536, 2, 196632, 65536, 2, 262168, 65536, 2, 327704, 65536, 2, 393240, 65536, 2, 458776, 65536, 2, 524312, 65536, 2, 589848, 65536, 2, 655384, 65536, 2, 720920, 65536, 2, 786456, 65536, 2, 851992, 65536, 2, 917528, 65536, 2, 131097, 65536, 2, 196633, 65536, 2, 262169, 65536, 2, 327705, 65536, 2, 393241, 65536, 2, 458777, 65536, 2, 524313, 65536, 2, 589849, 65536, 2, 655385, 65536, 2, 720921, 65536, 2, 786457, 65536, 2, 851993, 65536, 2, 917529, 65536, 2, 131098, 65536, 2, 196634, 65536, 2, 262170, 65536, 2, 327706, 65536, 2, 393242, 65536, 2, 458778, 65536, 2, 524314, 65536, 2, 589850, 65536, 2, 655386, 65536, 2, 720922, 65536, 2, 786458, 65536, 2, 851994, 65536, 2, 917530, 65536, 2, 131099, 65536, 2, 196635, 65536, 2, 262171, 65536, 2, 327707, 65536, 2, 393243, 65536, 2, 458779, 65536, 2, 524315, 65536, 2, 589851, 65536, 2, 655387, 65536, 2, 720923, 65536, 2, 786459, 65536, 2, 851995, 65536, 2, 917531, 65536, 2, 131100, 65536, 2, 196636, 65536, 2, 262172, 65536, 2, 327708, 65536, 2, 393244, 65536, 2, 458780, 65536, 2, 524316, 65536, 2, 589852, 65536, 2, 655388, 65536, 2, 720924, 65536, 2, 786460, 65536, 2, 851996, 65536, 2, 917532, 65536, 2, 131101, 65536, 2, 196637, 65536, 2, 262173, 65536, 2, 327709, 65536, 2, 393245, 65536, 2, 458781, 65536, 2, 524317, 65536, 2, 589853, 65536, 2, 655389, 65536, 2, 720925, 65536, 2, 786461, 65536, 2, 851997, 65536, 2, 917533, 65536, 2, 131102, 65536, 2, 196638, 65536, 2, 262174, 65536, 2, 327710, 65536, 2, 393246, 65536, 2, 458782, 65536, 2, 524318, 65536, 2, 589854, 65536, 2, 655390, 65536, 2, 720926, 65536, 2, 786462, 65536, 2, 851998, 65536, 2, 917534, 65536, 2, 131103, 131072, 2, 196639, 131072, 2, 262175, 131072, 2, 327711, 131072, 2, 393247, 131072, 2, 458783, 131072, 2, 524319, 131072, 2, 589855, 131072, 2, 655391, 131072, 2, 720927, 131072, 2, 786463, 131072, 2, 851999, 131072, 2, 917535, 131072, 2, 983041, 65536, 2, 1048577, 65536, 2, 1114113, 65536, 2, 1179649, 65536, 2, 983042, 65536, 2, 1048578, 65536, 2, 1114114, 65536, 2, 1179650, 65536, 2, 983043, 65536, 2, 1048579, 65536, 2, 1114115, 65536, 2, 1179651, 65536, 2, 983044, 65536, 2, 1048580, 65536, 2, 1114116, 65536, 2, 1179652, 65536, 2, 983045, 65536, 2, 1048581, 65536, 2, 1114117, 65536, 2, 1179653, 65536, 2, 983046, 65536, 2, 1048582, 65536, 2, 1114118, 65536, 2, 1179654, 65536, 2, 983047, 65536, 2, 1048583, 65536, 2, 1114119, 65536, 2, 1179655, 65536, 2, 983048, 65536, 2, 1048584, 65536, 2, 1114120, 65536, 2, 1179656, 65536, 2, 983049, 65536, 2, 1048585, 65536, 2, 1114121, 65536, 2, 1179657, 65536, 2, 983050, 65536, 2, 1048586, 65536, 2, 1114122, 65536, 2, 1179658, 65536, 2, 983051, 65536, 2, 1048587, 65536, 2, 1114123, 65536, 2, 1179659, 65536, 2, 983052, 65536, 2, 1048588, 65536, 2, 1114124, 65536, 2, 1179660, 65536, 2, 983053, 65536, 2, 1048589, 65536, 2, 1114125, 65536, 2, 1179661, 65536, 2, 983054, 65536, 2, 1048590, 65536, 2, 1114126, 65536, 2, 1179662, 65536, 2, 983055, 65536, 2, 1048591, 65536, 2, 1114127, 65536, 2, 1179663, 65536, 2, 983056, 65536, 2, 1048592, 65536, 2, 1114128, 65536, 2, 1179664, 65536, 2, 983057, 65536, 2, 1048593, 65536, 2, 1114129, 65536, 2, 1179665, 65536, 2, 983058, 65536, 2, 1048594, 65536, 2, 1114130, 65536, 2, 1179666, 65536, 2, 983059, 65536, 2, 1048595, 65536, 2, 1114131, 65536, 2, 1179667, 65536, 2, 983060, 65536, 2, 1048596, 65536, 2, 1114132, 65536, 2, 1179668, 65536, 2, 983061, 65536, 2, 1048597, 65536, 2, 1114133, 65536, 2, 1179669, 65536, 2, 983062, 65536, 2, 1048598, 65536, 2, 1114134, 65536, 2, 1179670, 65536, 2, 983063, 65536, 2, 1048599, 65536, 2, 1114135, 65536, 2, 1179671, 65536, 2, 983064, 65536, 2, 1048600, 65536, 2, 1114136, 65536, 2, 1179672, 65536, 2, 983065, 65536, 2, 1048601, 65536, 2, 1114137, 65536, 2, 1179673, 65536, 2, 983066, 65536, 2, 1048602, 65536, 2, 1114138, 65536, 2, 1179674, 65536, 2, 983067, 65536, 2, 1048603, 65536, 2, 1114139, 65536, 2, 1179675, 65536, 2, 983068, 65536, 2, 1048604, 65536, 2, 1114140, 65536, 2, 1179676, 65536, 2, 983069, 65536, 2, 1048605, 65536, 2, 1114141, 65536, 2, 1179677, 65536, 2, 983070, 65536, 2, 1048606, 65536, 2, 1114142, 65536, 2, 1179678, 65536, 2, 983071, 131072, 2, 1048607, 131072, 2, 1114143, 131072, 2, 1179679, 131072, 2, 1245185, 65536, 3, 1245186, 65536, 3, 1245187, 65536, 3, 1245188, 65536, 3, 1245189, 65536, 3, 1245190, 65536, 3, 1245191, 65536, 3, 1245192, 65536, 3, 1245193, 65536, 3, 1245194, 65536, 3, 1245195, 65536, 3, 1245196, 65536, 3, 1245197, 65536, 3, 1245198, 65536, 3, 1245199, 65536, 3, 1245200, 65536, 3, 1245201, 65536, 3, 1245202, 65536, 3, 1245203, 65536, 3, 1245204, 65536, 3, 1245205, 65536, 3, 1245206, 65536, 3, 1245207, 65536, 3, 1245208, 65536, 3, 1245209, 65536, 3, 1245210, 65536, 3, 1245211, 65536, 3, 1245212, 65536, 3, 1245213, 65536, 3, 1245214, 65536, 3, 1245184, 0, 3, 262144, 0, 2, 327680, 0, 2, 393216, 0, 2, 458752, 0, 2, 524288, 0, 2, 589824, 0, 2, 655360, 0, 2, 720896, 0, 2, 786432, 0, 2, 851968, 0, 2, 917504, 0, 2, 983040, 0, 2, 1048576, 0, 2, 1114112, 0, 2, 1179648, 0, 2, 131072, 0, 2, 196608, 0, 2, 65536, 0, 1, 65537, 65536, 1, 65538, 65536, 1, 65539, 65536, 1, 65540, 65536, 1, 65541, 65536, 1, 65542, 65536, 1, 65543, 65536, 1, 65544, 65536, 1, 65545, 65536, 1, 65546, 65536, 1, 65547, 65536, 1, 65548, 65536, 1, 65549, 65536, 1, 65550, 65536, 1, 65551, 65536, 1, 65552, 65536, 1, 65553, 65536, 1, 65554, 65536, 1, 65555, 65536, 1, 65556, 65536, 1, 65557, 65536, 1, 65558, 65536, 1, 65559, 65536, 1, 65560, 65536, 1, 65561, 65536, 1, 65562, 65536, 1, 65563, 65536, 1, 65564, 65536, 1, 65565, 65536, 1, 65566, 65536, 1, 65567, 131072, 1, 1245215, 131072, 3, 31, 131072, 0, 1, 65536, 0, 2, 65536, 0, 3, 65536, 0, 4, 65536, 0, 5, 65536, 0, 6, 65536, 0, 7, 65536, 0, 8, 65536, 0, 9, 65536, 0, 10, 65536, 0, 11, 65536, 0, 12, 65536, 0, 13, 65536, 0, 14, 65536, 0, 15, 65536, 0, 16, 65536, 0, 17, 65536, 0, 18, 65536, 0, 19, 65536, 0, 20, 65536, 0, 21, 65536, 0, 22, 65536, 0, 23, 65536, 0, 24, 65536, 0, 25, 65536, 0, 26, 65536, 0, 27, 65536, 0, 28, 65536, 0, 29, 65536, 0, 30, 65536, 0, 0, 0, 0)

[node name="Computers" parent="." instance=ExtResource("14_5s037")]
position = Vector2(209, 185)
collision_layer = 3

[node name="Computers6" parent="." instance=ExtResource("14_5s037")]
position = Vector2(562, 518)
collision_layer = 3

[node name="Computers5" parent="." instance=ExtResource("14_5s037")]
position = Vector2(562, 358)
collision_layer = 3

[node name="Computers2" parent="." instance=ExtResource("14_5s037")]
position = Vector2(562, 184)
collision_layer = 3

[node name="Computers3" parent="." instance=ExtResource("14_5s037")]
position = Vector2(205, 518)
collision_layer = 3

[node name="Computers4" parent="." instance=ExtResource("14_5s037")]
position = Vector2(208, 359)
collision_layer = 3

[node name="Vending_machine" parent="." instance=ExtResource("3_mi8ll")]
z_index = 1
position = Vector2(852, 44)
collision_layer = 3

[node name="Area2D" type="Area2D" parent="Vending_machine"]
script = ExtResource("4_w3i34")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vending_machine/Area2D"]
position = Vector2(0, 46.75)
shape = SubResource("RectangleShape2D_6iioq")

[node name="Door_inside" parent="." instance=ExtResource("3_bo535")]
position = Vector2(1025, 235)

[node name="Door_to_level4" type="Node" parent="."]

[node name="doorLevel4" type="Area2D" parent="Door_to_level4"]
script = ExtResource("3_c2jgi")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Door_to_level4/doorLevel4"]
position = Vector2(1033, 237)
shape = SubResource("CircleShape2D_1ju8r")

[node name="doorAudio" type="AudioStreamPlayer2D" parent="Door_to_level4/doorLevel4"]
stream = ExtResource("8_1ipo6")

[node name="ColorRect" type="ColorRect" parent="Door_to_level4"]
offset_left = 1019.0
offset_top = 203.0
offset_right = 1047.0
offset_bottom = 267.0
color = Color(1, 1, 1, 0)

[node name="AnimationWay" type="AnimationPlayer" parent="Door_to_level4"]
libraries = {
"": SubResource("AnimationLibrary_e2k7j")
}

[node name="Door_to_Level2" type="Node" parent="."]

[node name="doorLevel2" parent="Door_to_Level2" instance=ExtResource("3_bo535")]
position = Vector2(1024, 560)

[node name="marker_level3" type="Marker2D" parent="."]
position = Vector2(972, 572)

[node name="start_spawn_player_point" type="Marker2D" parent="."]
position = Vector2(971, 560)

[node name="Enemy" parent="." instance=ExtResource("7_ieths")]
z_index = 2
position = Vector2(410, 335)
detection_distance = 500.0

[node name="Enemy7" parent="." instance=ExtResource("7_ieths")]
z_index = 2
position = Vector2(61, 353)

[node name="Enemy6" parent="." instance=ExtResource("7_ieths")]
z_index = 2
position = Vector2(75, 588)

[node name="Enemy5" parent="." instance=ExtResource("7_ieths")]
z_index = 2
position = Vector2(746, 116)

[node name="Enemy4" parent="." instance=ExtResource("7_ieths")]
z_index = 2
position = Vector2(761, 332)

[node name="Enemy3" parent="." instance=ExtResource("7_ieths")]
z_index = 2
position = Vector2(381, 123)

[node name="Enemy2" parent="." instance=ExtResource("7_ieths")]
z_index = 2
position = Vector2(76, 134)

[node name="Teo_Snorbest" parent="." instance=ExtResource("5_cw2v8")]
z_index = 2
position = Vector2(977, 540)

[node name="Camera2D" type="Camera2D" parent="Teo_Snorbest"]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 1024
limit_bottom = 640
position_smoothing_enabled = true
rotation_smoothing_enabled = true
rotation_smoothing_speed = 1.0

[node name="Label_kills" type="CanvasLayer" parent="."]

[node name="KilledBar" parent="Label_kills" instance=ExtResource("8_1lsfi")]

[node name="Label_coins" type="CanvasLayer" parent="."]

[node name="CoinsBar" parent="Label_coins" instance=ExtResource("10_ssqv5")]

[node name="HealMenu" type="CanvasLayer" parent="."]

[node name="heal_menu2" parent="HealMenu" instance=ExtResource("11_g3gpw")]

[node name="PauseMenu" type="CanvasLayer" parent="."]

[node name="PausedMenu" parent="PauseMenu" instance=ExtResource("4_x8pl2")]
visible = false

[node name="DiedMenu" type="CanvasLayer" parent="."]

[node name="DieMenu" parent="DiedMenu" instance=ExtResource("9_o1yx0")]
visible = false

[node name="levelAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_b6mvl")
volume_db = -20.0

[connection signal="body_entered" from="Vending_machine/Area2D" to="Vending_machine/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Vending_machine/Area2D" to="Vending_machine/Area2D" method="_on_body_exited"]
[connection signal="body_entered" from="Door_to_level4/doorLevel4" to="Door_to_level4/doorLevel4" method="_on_body_entered"]
[connection signal="body_exited" from="Door_to_level4/doorLevel4" to="Door_to_level4/doorLevel4" method="_on_body_exited"]
[connection signal="finished" from="levelAudio" to="." method="_on_level_audio_finished"]
